[package]
name = "todo-or-die"
version = "0.1.0"
edition = "2018"

[features]
default = []
github = [
    "hyper",
    "hyper-rustls",
    "once_cell",
    "rustls",
    "serde",
    "serde_json",
    "tokio",
    "webpki-roots",
]
time = ["chrono"]

[dependencies]
anyhow = "1.0"
quote = "1.0"
syn = "1.0"

# optional dependencies
hyper = { optional = true, version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { optional = true, version = "0.22", features = ["webpki-roots"] }
once_cell = { optional = true, version = "1.8" }
rustls = { optional = true, version = "0.19" }
serde = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" }
tokio = { optional = true, version = "1.11", features = ["rt"] }
webpki-roots = { optional = true, version = "0.21" }
chrono = { optional = true, version = "0.4" }

[lib]
proc-macro = true
