[package]
name = "todo-or-die"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["development-tools"]
description = "TODOs checked at compile time"
edition = "2018"
homepage = "https://github.com/davidpdrsn/todo-or-die"
keywords = ["todo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/todo-or-die"

[features]
default = []
github = ["__internal_http"]
time = ["chrono"]
crate = [
    "__internal_http",
    "semver",
]

# an internal feature to more easily enable http crates
# don't use this yourself
__internal_http = [
    "hyper",
    "hyper-rustls",
    "once_cell",
    "rustls",
    "serde",
    "serde_json",
    "tokio",
    "webpki-roots",
]

[dependencies]
anyhow = "1.0"
quote = "1.0"
syn = "1.0"

# optional dependencies
chrono = { optional = true, version = "0.4", default_features = false, features = ["clock"] }
hyper = { optional = true, version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { optional = true, version = "0.22", features = ["webpki-roots"] }
once_cell = { optional = true, version = "1.0" }
rustls = { optional = true, version = "0.19" }
semver = { optional = true, version = "1.0" }
serde = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" }
tokio = { optional = true, version = "1.0", features = ["rt"] }
webpki-roots = { optional = true, version = "0.21" }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["github", "time", "crate"]
